<resources>
    <string name="app_name">MergeAid</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to Login</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">Logout</string>
    <string name="register_title">Create Your Account</string>
    <string name="login_now">Already have an account? <u>Login</u></string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="search_hint">Search</string>
    <string name="cases_count_placeholder">35</string>
    <string name="cases_label">Cases</string>
    <string name="day_placeholder">4</string>
    <string name="month_year_placeholder">Nov 2025</string>
    <string name="user_count_placeholder">23</string>
    <string name="user_label">User</string>
    <string name="user_name_placeholder">USER NAME</string>
    <string name="user_address_placeholder">USER current Address</string>
    <string name="call_label">CALL</string>
    <string name="favorites_desc">Favorites</string>
    <string name="search_icon_desc">Search Icon</string>
    <string name="location_icon_desc">Location Icon</string>
    <string name="alert_icon_desc">Alert Icon</string>
    <string name="welcome_back_glad_nto_see_you_again">Welcome back! Glad\nto see you, Again!</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account? <u>Register Now</u></string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="distance">Distance</string>
    <string name="tap_again_for_route">👆 Tap again for route</string>
    <string name="select_emergency_type">Select Emergency Type</string>
    <string name="medical">Medical</string>
    <string name="accident">Accident</string>
    <string name="mental_health">Mental Health</string>
    <string name="other">Other</string>
    <string name="cancel">Cancel</string>
    <string name="username">Username</string>
    <string name="swipe_right_to_see_how_we_can_help_you">Swipe right to see how we can help you.</string>
    <string name="ready_to_join">Ready to Join?</string>
    <string name="my_favorites">My Favorites</string>
    <string name="enter_address_or_location">Enter address or location</string>
    <string name="add">Add</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="email_address">Email Address</string>
    <string name="display_name">Display Name</string>
    <string name="bio">Bio</string>
    <string name="certifications">Certifications</string>
    <string name="helped_more_than_10_incidents">Helped more than 10 incidents</string>
    <string name="have_knowledge_in_first_aid">Have knowledge in First Aid</string>
    <string name="posted_more_than_10_incidents">Posted more than 10 incidents</string>
    <string name="save_changes">Save Changes</string>
    <string name="log_out">Log Out</string>
    <string name="user_details">User Details</string>
</resources>
